--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <body>
 
 <div class="container text-center pt-5">
+    <a href="second.html">Second page</a>
+</div>
+
+<div class="container text-center pt-5">
     <div class="row justify-content-around pt-5">
         <div id="appOne" class="col-12 col-md-5 border p-2">
             <p>appOne</p>
