--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Mutliple Vue instances share one Pinia store</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://unpkg.com/vue-demi"></script>
-    <script src="https://unpkg.com/pinia"></script>
+    <script src="https://unpkg.com/pinia@2"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
